Fix container width on mobile

--- a/css/compat/themes/compat-colibri-wp-326-beta-14.css
+++ b/css/compat/themes/compat-colibri-wp-326-beta-14.css
@@ -4,6 +4,14 @@
   }
 }
 
+@media (max-width: 749px) {
+  body.theme-colibri-wp.woocommerce-checkout .fc-content.h-section-boxed-container {
+    width: 100%;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+}
+
 body.theme-colibri-wp.woocommerce-checkout .fc-content {
   color: #6B7C93;
 }
