--- a/sass/compat/themes/colibri-wp/_checkout-content-area.scss
+++ b/sass/compat/themes/colibri-wp/_checkout-content-area.scss
@@ -2,6 +2,14 @@
 // CHECKOUT CONTENT AREA
 // ------------------------------------
 
+body#{ $_body-theme-selector }#{ $_body-page-selector } .fc-content.h-section-boxed-container {
+	@media (#{$bp-smaller-than-tablet}) { 
+		width: 100%;
+		padding-#{ $alignment-left }: remsize( 2rem ) !important; // Needed to override theme styles
+		padding-#{ $alignment-right }: remsize( 2rem ) !important; // Needed to override theme styles
+	}
+}
+
 body#{ $_body-theme-selector }#{ $_body-page-selector } .fc-content {
 	color: #6B7C93; // Needed to use theme color to match its styles
 }
